--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "author": "Vitaly Gordon <rocket.mind@gmail.com> (http://github.com/xpl)",
   "license": "MIT",
   "dependencies": {
-    "chai-spies": "^0.7.1",
+    "chai-spies": "^0.7.1"
   },
   "peerDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.0.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
     "babel-core": "^6.13.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2017": "^1.6.1",
